--- a/MultiLevelCachePoC.ConsoleCacheClient/App.config
+++ b/MultiLevelCachePoC.ConsoleCacheClient/App.config
@@ -1,6 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_ICacheMasterService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:55638/Tier2Cache.svc" binding="basicHttpBinding"
+          bindingConfiguration="BasicHttpBinding_ICacheMasterService"
+          contract="UpperCache.ICacheMasterService" name="BasicHttpBinding_ICacheMasterService" />
+    </client>
+  </system.serviceModel>
 </configuration>
