--- a/MultiLevelCachePoC.ConsoleCacheClient/App.config
+++ b/MultiLevelCachePoC.ConsoleCacheClient/App.config
@@ -7,13 +7,13 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_ICacheMasterService" />
+        <binding name="BasicHttpBinding_IMasterCacheService" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:55638/Tier2Cache.svc" binding="basicHttpBinding"
-          bindingConfiguration="BasicHttpBinding_ICacheMasterService"
-          contract="UpperCache.ICacheMasterService" name="BasicHttpBinding_ICacheMasterService" />
+      <endpoint address="http://localhost:58367/Tier2Cache.svc" binding="basicHttpBinding"
+          bindingConfiguration="BasicHttpBinding_IMasterCacheService"
+          contract="UpperTierCache.IMasterCacheService" name="BasicHttpBinding_IMasterCacheService" />
     </client>
   </system.serviceModel>
 </configuration>
