--- a/MultiLevelCachePoC.ConsoleLocalCache/App.config
+++ b/MultiLevelCachePoC.ConsoleLocalCache/App.config
@@ -1,6 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings>    
+    <add key="IsCacheSlave" value="Yes"/>
+  </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_ICacheManager" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:58545/MasterCache.svc" binding="basicHttpBinding"
+          bindingConfiguration="BasicHttpBinding_ICacheManager" contract="UpperLevelCache.ICacheManager"
+          name="BasicHttpBinding_ICacheManager" />
+    </client>
+  </system.serviceModel>
+
+  <system.runtime.serialization>
+    <dataContractSerializer>
+      <declaredTypes>
+
+        <add type = "MultiLevelCachePoC.CacheContracts.EntityContracts.CacheableEntity, MultiLevelCachePoC.CacheContracts">
+          <knownType type = "MultiLevelCachePoC.Domain.Engine,  MultiLevelCachePoC.Domain"/>
+          <knownType type = "MultiLevelCachePoC.Domain.Station, MultiLevelCachePoC.Domain"/>
+        </add>
+
+      </declaredTypes>
+    </dataContractSerializer>
+  </system.runtime.serialization>
 </configuration>
