--- a/MultiLevelCachePoC.Domain/MultiLevelCachePoC.Domain.csproj
+++ b/MultiLevelCachePoC.Domain/MultiLevelCachePoC.Domain.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{41389B8B-7BF2-4046-9571-C886D0019FE6}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{17567C81-F7B1-4574-A725-38956E3B9B88}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MultiLevelCachePoC.ConsoleLocalCache</RootNamespace>
-    <AssemblyName>MultiLevelCachePoC.ConsoleLocalCache</AssemblyName>
+    <RootNamespace>MultiLevelCachePoC.Domain</RootNamespace>
+    <AssemblyName>MultiLevelCachePoC.Domain</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,34 +30,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Engine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
+    <Compile Include="Station.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MultiLevelCachePoC.CacheContracts\MultiLevelCachePoC.CacheContracts.csproj">
       <Project>{0011019e-4196-4dab-80bb-54be0d54d3d5}</Project>
       <Name>MultiLevelCachePoC.CacheContracts</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MultiLevelCachePoC.CacheCore\MultiLevelCachePoC.CacheCore.csproj">
-      <Project>{bebef0ee-9d1e-4d57-851e-a31c7052520e}</Project>
-      <Name>MultiLevelCachePoC.CacheCore</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MultiLevelCachePoC.Domain\MultiLevelCachePoC.Domain.csproj">
-      <Project>{17567c81-f7b1-4574-a725-38956e3b9b88}</Project>
-      <Name>MultiLevelCachePoC.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
