--- a/MultiLevelCachePoC.CacheContracts/MultiLevelCachePoC.CacheContracts.csproj
+++ b/MultiLevelCachePoC.CacheContracts/MultiLevelCachePoC.CacheContracts.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiContracts\ICacheManager.cs" />
+    <Compile Include="ApiContracts\SyncMode.cs" />
     <Compile Include="EntityContracts\CacheableEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
