--- a/MultiLevelCachePoC.WcfMasterCache/Web.config
+++ b/MultiLevelCachePoC.WcfMasterCache/Web.config
@@ -1,13 +1,19 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-
   <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
-    <add key="IsCacheSlave" value="No"/>
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>    
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2"/>
+    <compilation debug="true" targetFramework="4.5"/>
+    <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.serviceModel>
     <behaviors>
@@ -21,12 +27,9 @@
       </serviceBehaviors>
     </behaviors>
     <protocolMapping>
-      <add binding="basicHttpsBinding" scheme="https" />
+      <add binding="basicHttpsBinding" scheme="https"/>
     </protocolMapping>
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
-
-   
-
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
@@ -36,19 +39,14 @@
       -->
     <directoryBrowse enabled="true"/>
   </system.webServer>
-
   <system.runtime.serialization>
     <dataContractSerializer>
       <declaredTypes>
-
-        <add type = "MultiLevelCachePoC.CacheContracts.EntityContracts.CacheableEntity, MultiLevelCachePoC.CacheContracts">
-          <knownType type = "MultiLevelCachePoC.Domain.Engine,  MultiLevelCachePoC.Domain"/>
-          <knownType type = "MultiLevelCachePoC.Domain.Station, MultiLevelCachePoC.Domain"/>
+        <add type="MultiLevelCachePoC.CacheCore.EntityContracts.CacheableEntity, MultiLevelCachePoC.CacheCore">
+          <knownType type="MultiLevelCachePoC.Domain.Engine,  MultiLevelCachePoC.Domain"/>
+          <knownType type="MultiLevelCachePoC.Domain.Station, MultiLevelCachePoC.Domain"/>
         </add>
-
       </declaredTypes>
     </dataContractSerializer>
   </system.runtime.serialization>
-
-
-  </configuration>
+</configuration>
