--- a/MultiLevelCachePoC.ConsoleLocalCache/App.config
+++ b/MultiLevelCachePoC.ConsoleLocalCache/App.config
@@ -1,21 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <appSettings>    
-    <add key="IsCacheSlave" value="Yes"/>
-  </appSettings>
+ 
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_ICacheManager" />
+        <binding name="BasicHttpBinding_ICacheManager"/>
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:58545/MasterCache.svc" binding="basicHttpBinding"
-          bindingConfiguration="BasicHttpBinding_ICacheManager" contract="UpperLevelCache.ICacheManager"
-          name="BasicHttpBinding_ICacheManager" />
+      <endpoint address="http://localhost:58545/MasterCache.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICacheManager" contract="MultiLevelCachePoC.CacheCore.ApiContracts.ICacheManager" name="BasicHttpBinding_ICacheManager"/>
     </client>
   </system.serviceModel>
 
@@ -23,9 +19,9 @@
     <dataContractSerializer>
       <declaredTypes>
 
-        <add type = "MultiLevelCachePoC.CacheContracts.EntityContracts.CacheableEntity, MultiLevelCachePoC.CacheContracts">
-          <knownType type = "MultiLevelCachePoC.Domain.Engine,  MultiLevelCachePoC.Domain"/>
-          <knownType type = "MultiLevelCachePoC.Domain.Station, MultiLevelCachePoC.Domain"/>
+        <add type="MultiLevelCachePoC.CacheCore.EntityContracts.CacheableEntity, MultiLevelCachePoC.CacheCore">
+          <knownType type="MultiLevelCachePoC.Domain.Engine,  MultiLevelCachePoC.Domain"/>
+          <knownType type="MultiLevelCachePoC.Domain.Station, MultiLevelCachePoC.Domain"/>
         </add>
 
       </declaredTypes>
